--- a/index.html
+++ b/index.html
@@ -24,6 +24,11 @@
 
         	<span class="moves">3</span> Moves
 
+             <div class="timer">
+                <i class="fa fa-clock-o"></i>
+                0:0
+            </div>
+
             <div class="restart">
         		<i class="fa fa-repeat"></i>
         	</div>
