Added modal pop up when game is won

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         	</ul>
 
         	<span class="moves">3</span> Moves
-
+            <!-- Timer -->
              <div class="timer">
                 <i class="fa fa-clock-o"></i>
                 0:0
@@ -35,6 +35,13 @@
         </section>
 
         <ul class="deck"></ul>
+    </div>
+    <!-- Modal -->
+    <div class="modal">
+        <div class="modal-content">
+            <span class="close">&times;</span>
+            <p>You Win!</p>
+        </div>
     </div>
 
     <script src="js/app.js"></script>
