--- a/index.html
+++ b/index.html
@@ -41,6 +41,9 @@
         <div class="modal-content">
             <span class="close">&times;</span>
             <p>You Win!</p>
+            <div class="starRating"></div>
+            <div class="totalMoves"></div>
+            <div class="totalTime"></div>
         </div>
     </div>
 
