Added star count to modal

--- a/index.html
+++ b/index.html
@@ -41,6 +41,11 @@
         <div class="modal-content">
             <span class="close">&times;</span>
             <p>You Win!</p>
+            <!-- <ul class="stars">
+                <li><i class="fa fa-star"></i></li>
+                <li><i class="fa fa-star"></i></li>
+                <li><i class="fa fa-star"></i></li>
+            </ul> -->
             <div class="starRating"></div>
             <div class="totalMoves"></div>
             <div class="totalTime"></div>
